<resources>
    <string name="app_name">GithubUserApp</string>
    <string name="name_splash">GitHub</string>
    <string name="name">Nama User</string>
    <string name="username">Username</string>
    <string name="search">cari</string>
    <string name="organization">Organisasi</string>
    <string name="city">Kota</string>
    <string name="value">12</string>
    <string name="repository">Repository</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="tab_text_1">Followers</string>
    <string name="tab_text_2">Following</string>
    <string name="content_tab_text">This is Tab %1$d</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="id_user">14045</string>
    <string name="email_user">Email</string>
</resources>