<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.DetailUserActivity">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_margin="16dp"
        android:background="@drawable/ic_back"
        android:backgroundTint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_first_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fontFamily="@font/roboto_medium"
        android:paddingHorizontal="16dp"
        android:paddingVertical="16dp"
        android:text="@string/username"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:fontFamily="@font/roboto_medium"
        app:layout_constraintBottom_toBottomOf="@id/btn_back"
        app:layout_constraintStart_toEndOf="@id/btn_back"
        app:layout_constraintTop_toTopOf="@id/btn_back" />

    <View
        android:id="@+id/first_view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#D2D2D2"
        app:layout_constraintTop_toBottomOf="@id/tv_first_username" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_user"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/first_view"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        tools:src="@color/black" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingHorizontal="8dp"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:fontFamily="@font/roboto_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_user" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_second_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_thin"
        android:paddingHorizontal="8dp"
        android:text="@string/username"
        android:textColor="#8F8F8F"
        android:textSize="16sp"
        android:textStyle="bold"
        app:fontFamily="@font/roboto_thin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_name" />

    <ImageView
        android:id="@+id/img_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="8dp"
        android:src="@drawable/ic_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_second_username"
        tools:ignore="ContentDescription" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="8dp"
        android:text="@string/city"
        android:textColor="#8F8F8F"
        android:textSize="16sp"
        android:textStyle="bold"
        app:fontFamily="@font/roboto_thin"
        app:layout_constraintBottom_toBottomOf="@id/img_location"
        app:layout_constraintStart_toEndOf="@id/img_location"
        app:layout_constraintTop_toTopOf="@id/img_location" />

    <ImageView
        android:id="@+id/img_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="8dp"
        android:src="@drawable/ic_company"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_location"
        tools:ignore="ContentDescription" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="8dp"
        android:text="@string/organization"
        android:textColor="#8F8F8F"
        android:textSize="16sp"
        android:textStyle="bold"
        app:fontFamily="@font/roboto_thin"
        app:layout_constraintBottom_toBottomOf="@id/img_company"
        app:layout_constraintStart_toEndOf="@id/img_company"
        app:layout_constraintTop_toTopOf="@id/img_company" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/first_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/second_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.6"/>6

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/third_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9"/>




    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_value_followers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/first_guideline"
        app:layout_constraintEnd_toEndOf="@id/second_guideline"
        app:layout_constraintTop_toBottomOf="@id/first_view"
        android:layout_marginTop="32dp"
        android:text="@string/value"
        android:gravity="center_horizontal"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:fontFamily="@font/roboto_medium"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_followers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/followers"
        android:textColor="@color/black"
        android:gravity="center_horizontal"
        android:textSize="18sp"
        android:fontFamily="@font/roboto_medium"
        app:layout_constraintTop_toBottomOf="@id/tv_value_followers"
        app:layout_constraintStart_toStartOf="@id/first_guideline"
        app:layout_constraintEnd_toEndOf="@id/second_guideline"/>


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_value_following"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/second_guideline"
        app:layout_constraintEnd_toEndOf="@id/third_guideline"
        app:layout_constraintTop_toBottomOf="@id/first_view"
        android:layout_marginTop="32dp"
        android:text="@string/value"
        android:gravity="center_horizontal"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:fontFamily="@font/roboto_medium"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_following"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/following"
        android:textColor="@color/black"
        android:gravity="center_horizontal"
        android:textSize="18sp"
        android:fontFamily="@font/roboto_medium"
        app:layout_constraintTop_toBottomOf="@id/tv_value_following"
        app:layout_constraintStart_toStartOf="@id/second_guideline"
        app:layout_constraintEnd_toEndOf="@id/third_guideline"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabGravity="fill"
        android:layout_marginTop="16dp"
        app:tabIndicatorColor="@color/black"
        app:tabIndicatorHeight="4dp"
        android:background="@color/white"
        app:tabTextColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/img_company"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tab_layout"/>

</androidx.constraintlayout.widget.ConstraintLayout>